--- a/languages/aad-sso-wordpress-de_DE.po
+++ b/languages/aad-sso-wordpress-de_DE.po
@@ -61,7 +61,7 @@ msgstr ""
 msgid "Legacy settings could not be migrated from <code>%s</code>. "
 msgstr "Alte Einstellungen aus <code>%s</code> konnten nicht migriert werden. "
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:144
 msgid ""
 "Single Sign-on with Azure Active Directory settings have been reset to "
@@ -70,32 +70,32 @@ msgstr ""
 "Die Single Sign-On mit Azure Active Directory Einstellungen wurden auf die "
 "Standardwerte zurückgesetzt."
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:155
 msgid "Azure Active Directory Settings"
 msgstr "Azure Active Directory Einstellungen"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:183
 msgid "General"
 msgstr "Allgemein"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:190
 msgid "Display name"
 msgstr "Anzeigename"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:198
 msgid "Domain hint"
 msgstr "Domänen-Hinweis"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:206
 msgid "Client ID"
 msgstr "Client ID"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:214
 msgid "Client secret"
 msgstr "Client Passwort (Secret)"
@@ -108,58 +108,58 @@ msgstr "Weiterleitungs-URL"
 msgid "Logout redirect URL"
 msgstr "Weiterleitungs-URL nach Abmeldung"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:238
 msgid "Field to match to UPN"
 msgstr "Feld für UPN-Zuordnung"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:246
 msgid "Enable auto-provisioning"
 msgstr "Automatische Provisionierung aktivieren"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:254
 msgid "Enable auto-forward to Azure AD"
 msgstr "Automatische Weiterleitung zum Azure Active Directory aktivieren"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:262
 msgid "Enable Azure AD group to WP role association"
 msgstr "Azure AD Gruppen zu WordPress Rollen Zuordnung aktivieren"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:270
 msgid "Default WordPress role if not in Azure AD group"
 msgstr "Standard WordPress-Rolle falls nicht in Azure AD Gruppe"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:278
 msgid "WordPress role to Azure AD group map"
 msgstr "WordPress Rollen-Zuordnung zu Azure AD Gruppen"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:380
 msgid "Map WordPress roles to Azure Active Directory groups."
 msgstr "WordPress Rollen zu Azure Active Directory Gruppen zuordnen."
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:385
 msgid "WordPress Role"
 msgstr "WordPress-Rolle"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:386
 msgid "Azure AD Group Object ID"
 msgstr "Azure Gruppen-Objekt ID"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:415
 msgid "Display Name will be shown on the WordPress login screen."
 msgstr ""
 "Anzeigename, welcher auf dem WordPress Anmeldebildschirm angezeigt wird."
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:426
 msgid ""
 "Provides a hint to Azure AD about the domain or tenant they will be logging "
@@ -170,12 +170,12 @@ msgstr ""
 "sie angemeldet werden. Falls es sich um eine föderierte Domäne handelt, wird "
 "der Benutzer zum Föderations-Endpunkt weitergeleitet."
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:439
 msgid "The client ID of the Azure AD application representing this blog."
 msgstr "Die Client ID der Azure AD Anwendung, die diesen Blog repräsentiert."
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:450
 msgid "A secret key for the Azure AD application representing this blog."
 msgstr ""
@@ -212,17 +212,17 @@ msgstr ""
 "hinterlegt sein. (Dies beeinflusst nicht das Abmelden vom Blog, sondern wird "
 "nur verwendet beim Logout von Azure AD.)"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:498
 msgid "Email Address"
 msgstr "E-Mail Adresse"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:501
 msgid "Login Name"
 msgstr "Login-Name"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:507
 msgid ""
 "This specifies the WordPress user field which will be used to match to the "
@@ -232,7 +232,7 @@ msgstr ""
 "mit dem UserPrincipalName des Azure AD Benutzers verwendet wird. Die E-Mail-"
 "Adresse genügt in den meisten Fällen."
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:534
 msgid ""
 "This is the default role that users will be assigned to if matching Azure AD "
@@ -241,7 +241,7 @@ msgstr ""
 "Dies ist die Standard-Rolle, die Benutzern zugeordnet wird wenn die "
 "Zuordnung von Azure AD Gruppen zu WordPress-Rollen aktiviert ist."
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:545
 msgid ""
 "Automatically create WordPress users, if needed, for authenticated Azure AD "
@@ -250,7 +250,7 @@ msgstr ""
 "Automatisch Wordpress-Benutzerkonten für authentifizierte Azure AD Benutzer "
 "anlegen, falls nötig."
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:556
 msgid ""
 "Automatically forward users to the Azure AD to sign in, skipping the "
@@ -259,7 +259,7 @@ msgstr ""
 "Benutzer werden automatisch zum Azure AD Login umgeleitet, der WordPress-"
 "Anmeldebildschirm wird übersprungen."
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: SettingsPage.php:567
 msgid ""
 "Automatically assign WordPress user roles based on Azure AD group membership."
@@ -267,53 +267,53 @@ msgstr ""
 "Automatisch WordPress Benutzerrollen anhand der Zugehörigkeit zu Azure AD "
 "Gruppen zuweisen."
 
-# @ aad-sso-uniandes-wordpress
-#: aad-sso-uniandes-wordpress.php:246
+# @ aad-sso-wordpress
+#: aad-sso-wordpress.php:246
 #, php-format
 msgid "ANTIFORGERY_ID mismatch. Expecting %s"
 msgstr "ANTIFORGERY_ID stimmt nicht überein. Erwarte %s"
 
-# @ aad-sso-uniandes-wordpress
-#: aad-sso-uniandes-wordpress.php:265
+# @ aad-sso-wordpress
+#: aad-sso-wordpress.php:265
 #, php-format
 msgid "ERROR: Invalid id_token. %s"
 msgstr "FEHLER: Ungültiges id_token. %s"
 
-# @ aad-sso-uniandes-wordpress
-#: aad-sso-uniandes-wordpress.php:288
+# @ aad-sso-wordpress
+#: aad-sso-wordpress.php:288
 #, php-format
 msgid "ERROR: Could not get an access token to Azure Active Directory. %s"
 msgstr ""
 "Fehler: Konnte kein Access Token für Azure Active Directory erlangen. %s"
 
-# @ aad-sso-uniandes-wordpress
-#: aad-sso-uniandes-wordpress.php:295
+# @ aad-sso-wordpress
+#: aad-sso-wordpress.php:295
 msgid "ERROR: An unknown error occured."
 msgstr "FEHLER: Es trat ein unbekannter Fehler auf."
 
-# @ aad-sso-uniandes-wordpress
-#: aad-sso-uniandes-wordpress.php:304
+# @ aad-sso-wordpress
+#: aad-sso-wordpress.php:304
 #, php-format
 msgid "ERROR: Access denied to Azure Active Directory. %s"
 msgstr "FEHLER: Zugriff zu Azure Active Directory verweigert. %s"
 
-# @ aad-sso-uniandes-wordpress
-#: aad-sso-uniandes-wordpress.php:345
+# @ aad-sso-wordpress
+#: aad-sso-wordpress.php:345
 #, php-format
 msgid "ERROR: The authenticated user %s is not a registered user in this blog."
 msgstr ""
 "FEHLER: Der angemeldete Benutzer %s ist kein registrierter Benutzer dieses "
 "Blogs."
 
-# @ aad-sso-uniandes-wordpress
-#: aad-sso-uniandes-wordpress.php:393
+# @ aad-sso-wordpress
+#: aad-sso-wordpress.php:393
 #, php-format
 msgid "ERROR: AAD user %s is not a member of any group granting a role."
 msgstr ""
 "FEHLER: AAD Benutzer %s ist kein Mitglied einer Gruppe mit Rollenzuweisung."
 
-# @ aad-sso-uniandes-wordpress
-#: aad-sso-uniandes-wordpress.php:480
+# @ aad-sso-wordpress
+#: aad-sso-wordpress.php:480
 msgid ""
 "Single Sign-on with Azure Active Directory required settings are not "
 "defined. Update them under Settings > Azure AD."
@@ -322,18 +322,18 @@ msgstr ""
 "wurden nicht definiert. Aktualisieren Sie diese unter Einstellungen > Azure "
 "AD."
 
-# @ aad-sso-uniandes-wordpress
-#: aad-sso-uniandes-wordpress.php:508
+# @ aad-sso-wordpress
+#: aad-sso-wordpress.php:508
 #, php-format
 msgid "Sign in with your %s account"
 msgstr "Melden Sie sich mit Ihrem %s Konto an"
 
-# @ aad-sso-uniandes-wordpress
-#: aad-sso-uniandes-wordpress.php:511
+# @ aad-sso-wordpress
+#: aad-sso-wordpress.php:511
 msgid "Sign out"
 msgstr "Abmelden"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #. Plugin Name of the plugin/theme
 #: view/settings.php:3
 msgid "Single Sign-on with Azure Active Directory"
@@ -347,7 +347,7 @@ msgstr ""
 "Einstellungen für den Single Sign-On mit Azure Active Directory können hier "
 "vorgenommen werden."
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: view/settings.php:14
 msgid "Reset Plugin"
 msgstr "Plugin zurücksetzen"
@@ -356,12 +356,12 @@ msgstr "Plugin zurücksetzen"
 msgid "Resetting the plugin will completely remove all settings."
 msgstr "Das Zurücksetzen des Plugins entfernt alle Einstellungen."
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: view/settings.php:25
 msgid "Reset Settings"
 msgstr "Einstellungen zurücksetzen"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #: view/settings.php:26
 msgid ""
 "Reset the plugin to default settings. Careful, there is no undo for this."
@@ -420,10 +420,10 @@ msgstr ""
 "Bitte beachten Sie, dass dies nicht rückgängig gemacht werden kann."
 
 #. Plugin URI of the plugin/theme
-msgid "http://github.com/psignoret/aad-sso-uniandes-wordpress"
-msgstr "http://github.com/psignoret/aad-sso-uniandes-wordpress"
+msgid "http://github.com/psignoret/aad-sso-wordpress"
+msgstr "http://github.com/psignoret/aad-sso-wordpress"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #. Description of the plugin/theme
 msgid ""
 "Allows you to use your organization's Azure Active Directory user accounts "
@@ -450,7 +450,7 @@ msgstr "http://psignoret.com/"
 #~ msgid "<code>%s</code>"
 #~ msgstr "<code>%s</code>"
 
-# @ aad-sso-uniandes-wordpress
+# @ aad-sso-wordpress
 #~ msgid ""
 #~ "Settings for configuring single sign-on with Azure Active Directory can "
 #~ "be configured\n"
