--- a/languages/aad-sso-wordpress.pot
+++ b/languages/aad-sso-wordpress.pot
@@ -2,9 +2,9 @@
 msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
-"Project-Id-Version: Single Sign-on with Azure Active Directory\n"
+"Project-Id-Version: Single Sign-on con el Directorio activo de Azure\n"
 "POT-Creation-Date: 2019-10-02 17:33+0200\n"
-"PO-Revision-Date: 2016-04-06 13:57+0200\n"
+"PO-Revision-Date: 2020-14-0 13:57+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
